# nand_programmer

./: .gitignore  CHANGELOG.md  Makefile  README.md
debian/: nando.desktop  nando.pro  release.sh
debian/debian/: changelog  control  copyright  dirs  menu  nando.install  nando.postinst  rules  watch
extra/: autorouting.txt  debuging.txt  erase.sh  openocd.cfg  rename_gerber.sh
extra/jlink/: program.sh
firmware/: CMakeLists.txt  Makefile  Makefile.linux  Makefile.windows  cdc.c  chip_db.c  chip_db.h  chip_info.h  clock.c  fsmc_nand.c  fsmc_nand.h  jtag.c  led.c  led.h  main.c  nand_bad_block.c  nand_bad_block.h  nand_programmer.c  nand_programmer.h  stm32_flash.ld  syscalls.c  uart.c  version.h
firmware/bootloader/: Makefile  Makefile.linux  Makefile.windows  main.c  stm32_flash.ld  syscalls.c  uart.c  uart.h  version.h
firmware/libs/spl/: Makefile  Makefile.linux  Makefile.windows  init.c  usb_conf.h
firmware/libs/spl/CMSIS/CM3/DeviceSupport/ST/STM32F10x/: system_stm32f10x.c
firmware/programmer/: Makefile  Makefile.linux  Makefile.windows  cdc.c  cdc.h  chip.h  chip_info.h  clock.c  clock.h  flash.c  flash.h  flash_hal.h  fsmc_nand.c  fsmc_nand.h  fsmc_nor.c  fsmc_nor.h  jtag.c  jtag.h  led.c  led.h  log.h  main.c  nand_bad_block.c  nand_bad_block.h  nand_programmer.c  nand_programmer.h  spi_flash.c  spi_flash.h  stm32_flash_1.ld  stm32_flash_2.ld  uart.c  uart.h  usb.c  usb.h  version.h
firmware/usb_cdc/: hw_config.c  hw_config.h  usb_endp.c  usb_prop.c
kicad/: adapters.lib  fp-info-cache  fp-lib-table  nand_programmator-cache.lib  nand_programmator.bak  nand_programmator.csv  nand_programmator.kicad_pcb  nand_programmator.kicad_pcb-bak  nand_programmator.kicad_prl  nand_programmator.kicad_pro  nand_programmator.kicad_sch  nand_programmator.net  nand_programmator.pro  nand_programmator.sch  nand_programmator.xml  prog.bak  sym-lib-table
kicad/LIB_USB4500-03-0-A/: license.txt
kicad/LIB_USB4500-03-0-A/KiCad/: USB4500-03-0-A.dcm  USB4500-03-0-A.kicad_sym  USB4500-03-0-A.lib  USB4500-03-0-A.mod  USB4500030A.kicad_mod
kicad/adapter_soic8_solder/: adapter_soic8_solder-cache.lib  adapter_soic8_solder.kicad_pcb  adapter_soic8_solder.kicad_pro  adapter_soic8_solder.kicad_sch  adapter_soic8_solder.net  adapter_soic8_solder.sch
kicad/adapter_tsop48/: adapter_tsop48-cache.lib  adapter_tsop48.kicad_pcb  adapter_tsop48.kicad_pro  adapter_tsop48.kicad_sch  adapter_tsop48.net  adapter_tsop48.sch  adapter_tsop48.xml
kicad/adapter_tsop48_solder/: adapter_tsop48_solder.kicad_pcb  adapter_tsop48_solder.kicad_pro  adapter_tsop48_solder.kicad_sch  adapter_tsop48_solder.net  adapter_tsop48_solder.sch  sym-lib-table
kicad/adapters.pretty/: TSOP-48.kicad_mod
kicad/lib_fp.pretty/: C_0805_HandSoldering.kicad_mod  Crystal_HC49-U_Vertical.kicad_mod  Crystal_SMD_5032-4Pin_5.0x3.2mm.kicad_mod  IDC_Header_Straight_20pins.kicad_mod  LED_0805.kicad_mod  LQFP-100_14x14mm_Pitch0.5mm.kicad_mod  PinHeader_1x03_P2.54mm_Vertical.kicad_mod  PinHeader_1x04_P2.54mm_Vertical.kicad_mod  PinHeader_2x12_P2.54mm_Vertical_2.kicad_mod  PinSocket_2x12_P2.54mm_Vertical_2.kicad_mod  R_0805_HandSoldering.kicad_mod  SOT-223.kicad_mod  Switch_SPDT_P2.54mm_Vertical.kicad_mod  TSOP-48.kicad_mod  USB_Mini-B.kicad_mod
kicad/plugins/: bom_html_grouped_by_value.py  kicad_netlist_reader.py
kicad/sch_lib/: nand_programmator.dcm  nand_programmator.lib
libs/spl/: Makefile
libs/spl/STM32_USB-FS-Device_Driver/inc/: usb_lib.h
qt/: CMakeLists.txt  about_dialog.cpp  about_dialog.h  about_dialog.ui  buffer_table_model.cpp  buffer_table_model.h  chip_db.cpp  chip_db.h  chip_db_dialog.cpp  chip_db_dialog.h  chip_db_dialog.ui  chip_db_table_model.cpp  chip_db_table_model.h  chip_info.cpp  chip_info.h  clickcombobox.cpp  clickcombobox.h  cmd.h  dataviewer.cpp  dataviewer.h  err.cpp  err.h  firmware_update_dialog.cpp  firmware_update_dialog.h  firmware_update_dialog.ui  icons.qrc  logger.cpp  logger.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  nando_chip_db.csv  nando_parallel_chip_db.csv  nando_spi_chip_db.csv  parallel_chip_db.cpp  parallel_chip_db.h  parallel_chip_db_dialog.cpp  parallel_chip_db_dialog.h  parallel_chip_db_dialog.ui  (+35 more)
qt/img/: app_icon.icns
src/: fsmc_nand.h  hw_config.c  hw_config.h  main.c  stm3210e_eval_fsmc_nand.c  stm32_it.h  syscalls.c
windows/: release.bat
windows/config/: config.xml
